--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -112,7 +112,6 @@
         .bar-link {
           text-transform: uppercase;
           font-family: 'eleb';
-          -webkit-font-smoothing: antialiased;
           text-decoration: none;
           font-size: 3.6rem;
           color: $items-colors;
@@ -123,14 +122,10 @@
           -ms-hyphens: auto;
           hyphens: auto;
           -webkit-hyphenate-character: '⌁';
+          cursor: pointer;
 
           &:hover {
-            cursor: pointer;
-            background: url('/img/noise1.png') rgba($items-colors-over, 1);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-            // text-shadow: 0px 0px 3px rgba($items-colors-over, .2);
+            color: $items-colors-over;
           }
         }
       }
@@ -147,7 +142,7 @@
 
           color: $items-colors;       
           font-family: 'LMono';
-          font-variation-settings: 'wght' 400, 'wdth' 120;
+          font-variation-settings: 'wght' 300, 'wdth' 105;
           letter-spacing: 0.2rem;
           -webkit-font-smoothing: antialiased;              
           text-decoration: none;
@@ -156,7 +151,7 @@
           
           text-transform: uppercase;
           margin-right: 9px;
-          font-size: 1.1em;
+          font-size: 1.15em;
           border: 1px solid transparent;
           margin-bottom: 8px;
           // border-bottom: 1px solid $items-colors;
