--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,10 +73,6 @@ svg:focus {
   src: url("/fonts/leagueMono.ttf"); }
 
 @font-face {
-  font-family: 'GGX';
-  src: url("/fonts/GradeGX.woff2"); }
-
-@font-face {
   font-family: 'elel';
   src: url("/fonts/EleLight.otf"); }
 
@@ -246,7 +242,7 @@ svg:focus {
           #main-bar .bar-wrapper #bar-trigger .tag-position .tag-background:before {
             font-family: 'fontello';
             font-size: 0,8rem;
-            content: '\e800'; }
+            content: '\e801'; }
           #main-bar .bar-wrapper #bar-trigger .tag-position .tag-background span {
             display: inline;
             line-height: 1.3rem; }
@@ -341,21 +337,23 @@ svg:focus {
         width: 100%;
         margin-left: -10px;
         transform: translate(-50%, -50%);
-        letter-spacing: -0.12em;
+        letter-spacing: -0.09em;
         font-family: 'eleb';
         text-align: center;
         color: rgba(50, 41, 52, 0.87);
         font-size: calc(5vw + 9vh + 6vmin);
-        line-height: 1.05em;
+        line-height: 1.1em;
         text-shadow: 0 -2px 8px rgba(255, 255, 255, 0.15), 0 -6px 8px rgba(189, 230, 219, 0.6), 0 -3px 2px rgba(202, 249, 255, 0.8), 0 4px 0px #ff7598, 0 -2px 2px rgba(255, 255, 255, 0.5), 0 7px 2px rgba(19, 22, 24, 0.2), 0 8px 8px rgba(255, 67, 105, 0.7), 0 20px 2px rgba(50, 41, 52, 0.3); }
         #intro .intro-wrapper .my-name-container .my-name .name-line {
           width: 100%; }
         #intro .intro-wrapper .my-name-container .my-name .second-line {
-          margin-left: -0.7rem;
+          margin-left: -2rem;
           width: 110%; }
           #intro .intro-wrapper .my-name-container .my-name .second-line .space {
-            display: inline-block; }
+            display: inline-block;
+            width: 0.2em; }
           #intro .intro-wrapper .my-name-container .my-name .second-line .next-line {
+            vertical-align: top;
             font-size: 1.4em; }
 
 #main_title {
@@ -775,6 +773,11 @@ footer {
   margin-top: 40px;
   margin-bottom: 0 !important; }
 
+.document-bold {
+  font-variation-settings: 'wght' 900, 'wdth' 95;
+  text-decoration: line-through;
+  color: inherit !important; }
+
 #article-closer {
   position: fixed;
   right: -79px;
@@ -796,7 +799,8 @@ footer {
     #article-closer .document-close-container .document-close-text {
       font-family: 'eleb';
       text-align: left;
-      -webkit-font-smoothing: antialiased !important;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
       position: relative;
       height: 32px;
       transition: 0.1s ease-in;
@@ -837,20 +841,23 @@ footer {
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-auto-flow: dense;
   align-items: stretch;
-  justify-items: stretch; }
+  justify-items: stretch;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
   .document-project .document-project-front {
     grid-column-end: span 3;
     grid-row-end: span 2; }
     .document-project .document-project-front .document-project-front-container {
-      position: relative; }
+      position: relative;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale; }
       .document-project .document-project-front .document-project-front-container .document-project-front-top {
         position: absolute;
         bottom: 0px;
         width: 100%;
         padding: 10px;
         margin-bottom: 40px;
-        text-align: center;
-        color: #f5f3ea; }
+        text-align: center; }
         .document-project .document-project-front .document-project-front-container .document-project-front-top .document-project-front-top-left {
           display: inline-block;
           width: 38%;
@@ -859,7 +866,6 @@ footer {
           padding-left: 8px;
           padding-right: 4px; }
           .document-project .document-project-front .document-project-front-container .document-project-front-top .document-project-front-top-left .document-project-front-title {
-            color: #EBE9DE;
             font-family: 'eleb';
             font-size: calc(40px + 4 * (100vw - 320px) / 1180);
             text-transform: uppercase;
@@ -876,8 +882,6 @@ footer {
             letter-spacing: 0.2em;
             font-size: 0.8em;
             text-transform: uppercase;
-            background-color: #EBE9DE;
-            color: #82352F;
             font-variation-settings: 'wght' 900, 'wdth' 85; }
         .document-project .document-project-front .document-project-front-container .document-project-front-top .document-project-front-top-right {
           vertical-align: bottom;
@@ -895,6 +899,7 @@ footer {
             -moz-hyphens: auto;
             -ms-hyphens: auto;
             hyphens: auto;
+            width: 80%;
             -webkit-hyphenate-character: '⌁'; }
       .document-project .document-project-front .document-project-front-container .document-project-front-imageContainer {
         margin-bottom: -2px; }
@@ -908,7 +913,7 @@ footer {
         left: 0; }
   .document-project .document-project-abstract {
     position: relative;
-    align-self: center;
+    align-self: stretch;
     text-align: center;
     grid-column-end: span 2;
     grid-row-end: span 1; }
@@ -919,14 +924,16 @@ footer {
       .document-project .document-project-abstract .document-project-abstract-container .document-project-abstract-content {
         padding: 10px 0;
         width: 100%;
-        font-variation-settings: 'wght' 650, 'wdth' 85;
+        font-variation-settings: 'wght' 650, 'wdth' 95;
         line-height: 1.4em;
-        font-size: calc(1.1em + 4 * (100vw - 320px) / 1180); }
+        font-size: calc(1.1em + 4 * (100vw - 320px) / 1180);
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale; }
   .document-project .image-single-2 {
     grid-column-end: span 2;
     grid-row-end: span 1; }
     .document-project .image-single-2 .project-image-wrapper {
-      min-height: 250px; }
+      min-height: 350px; }
       .document-project .image-single-2 .project-image-wrapper .project-image {
         width: 100%; }
     .document-project .image-single-2 .content-loader {
@@ -940,7 +947,7 @@ footer {
     grid-column-end: span 1;
     grid-row-end: span 1;
     position: relative;
-    min-height: 150px; }
+    min-height: 250px; }
     .document-project .image-single-1 .content-loader {
       width: 100%;
       height: 100%;
@@ -964,9 +971,10 @@ footer {
     grid-column-end: span 2;
     grid-row-end: span 1;
     text-align: left;
-    line-height: 1.45em;
-    font-size: calc(0.9em + 4 * (100vw - 320px) / 1180);
-    font-variation-settings: 'wght' 500, 'wdth' 100; }
+    line-height: 1.4em;
+    font-size: calc(0.85em + 4 * (100vw - 320px) / 1180);
+    font-variation-settings: 'wght' 600, 'wdth' 100;
+    align-self: center; }
   .document-project .text-short {
     grid-column-end: span 1;
     grid-row-end: span 1;
@@ -975,9 +983,10 @@ footer {
     font-size: calc(1em + 4 * (100vw - 320px) / 1180);
     font-variation-settings: 'wght' 650, 'wdth' 85;
     align-self: center;
-    justify-self: center; }
+    justify-self: center;
+    padding: 30px 0px; }
     .document-project .text-short .project-text-wrapper .project-text {
-      padding: 0;
+      padding: 30px 0px;
       margin: 0% 10%;
       width: 80%; }
   .document-project .text-quote {
@@ -986,11 +995,21 @@ footer {
     text-align: center;
     font-variation-settings: 'wght' 650, 'wdth' 95; }
   .document-project .text-link {
-    grid-column-end: span 2;
+    grid-column-end: span 1;
     grid-row-end: span 1;
     text-align: center;
-    align-self: center;
+    align-self: stretch;
     font-variation-settings: 'wght' 650, 'wdth' 95; }
+    .document-project .text-link .project-text-wrapper .project-link {
+      padding-top: 55%; }
+  .document-project .text-link-download {
+    grid-column-end: span 1;
+    grid-row-end: span 1;
+    text-align: center;
+    align-self: stretch;
+    font-variation-settings: 'wght' 650, 'wdth' 95; }
+    .document-project .text-link-download .project-text-wrapper .project-link {
+      padding-top: 45%; }
 
 .project-image-dual-wrapper .project-dual-image {
   position: relative; }
@@ -1061,7 +1080,9 @@ footer {
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
-    -webkit-hyphenate-character: '-'; }
+    -webkit-hyphenate-character: '-';
+    -webkit-font-smoothing: antialiased !important;
+    font-smoothing: antialiased !important; }
   .project-text-wrapper .project-link {
     padding: 3em;
     font-family: 'LMono';
@@ -1079,7 +1100,7 @@ footer {
       .project-text-wrapper .project-link a:after {
         content: ''; }
       .project-text-wrapper .project-link a:hover {
-        font-variation-settings: 'wght' 900, 'wdth' 105; }
+        font-variation-settings: 'wght' 900, 'wdth' 95; }
     .project-text-wrapper .project-link p {
       text-decoration: none !important;
       font-variation-settings: 'wght' 500, 'wdth' 75;
@@ -1114,6 +1135,39 @@ footer {
         text-transform: capitalize; }
       .project-text-wrapper .project-quote .quote-container .quote-body .quote-label .quote-subdata {
         font-variation-settings: 'wght' 350, 'wdth' 95; }
+
+.document-v-span-1 {
+  grid-row-end: span 1; }
+
+.document-v-span-2 {
+  grid-row-end: span 2; }
+
+.document-v-span-3 {
+  grid-row-end: span 3; }
+
+.document-h-span-1 {
+  grid-column-end: span 1; }
+
+.document-h-span-2 {
+  grid-column-end: span 2; }
+
+.document-h-span-3 {
+  grid-column-end: span 3; }
+
+@media all and (max-width: 690px) {
+  .document-project .document-project-abstract {
+    grid-column-end: span 3; }
+  .document-project .image-single-2 {
+    grid-column-end: span 3; }
+  .document-project .text-long {
+    grid-column-end: span 3; }
+  .document-project .text-short {
+    grid-column-end: span 3; }
+  .document-project .text-link {
+    grid-column-end: span 3;
+    padding-bottom: 0px; }
+    .document-project .text-link .project-text-wrapper {
+      padding: 30px 0px; } }
 
 @media all and (max-width: 975px) {
   .document-project .document-project-abstract {
@@ -1234,7 +1288,9 @@ footer {
   position: fixed;
   top: 20vh;
   right: 0;
-  z-index: 2; }
+  z-index: 2;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
   #cv-launcher-container:hover .cv-launcher-button {
     background-color: #FF4369 !important; }
   #cv-launcher-container .cv-launcher-button {
@@ -1840,4 +1896,6 @@ a {
   height: 100%; }
 
 .fixScroll {
+  overflow: hidden;
+  height: 0;
   transform: translateX(-100%) !important; }
