--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -11,10 +11,19 @@
   margin-bottom: 0 !important;
 }
 
+.document-single-complete {
+  width: 140%;
+
+}
+
 .document-bold {
   font-variation-settings: 'wght' 900, 'wdth' 95;
+}
+
+.document-line {
+  font-variation-settings: 'wght' 900, 'wdth' 95;
   text-decoration: line-through;
-  color: inherit !important;
+  text-decoration-style: dotted;
 }
 
 #article-closer {
@@ -239,11 +248,11 @@
     grid-row-end: span 1;
     position: relative;
     min-height: 250px;
+    align-self: stretch;
 
     .project-image-wrapper {
       // min-height: 350px;
       .project-image {
-        // width: 60%;
       }
     }
     .content-loader {
@@ -288,16 +297,20 @@
     text-align: left;
     line-height: 1.45em;
     font-size: calc(1em + 4 * (100vw - 320px) / 1180);
-    font-variation-settings: 'wght' 650, 'wdth' 85;
-    align-self: center;
+    font-variation-settings: 'wght' 400, 'wdth' 85;
+    align-self: stretch;
     justify-self: center;
     padding: 30px 0px;
+    box-shadow: 0 18px 0 rgba(#000, 0.15);
+
 
     .project-text-wrapper {
       .project-text {
         padding: 30px 0px;
         margin: 0% 10%;
         width: 80%;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
     }
   }
@@ -314,8 +327,9 @@
     grid-row-end: span 1;
     text-align: center;
     align-self: stretch;
-    
     font-variation-settings: 'wght' 650, 'wdth' 95;
+    min-width: 250px;
+    
     .project-text-wrapper {
       .project-link {
         padding-top: 55%;
@@ -555,6 +569,7 @@
 
     .text-short {
       grid-column-end: span 3;
+      margin-bottom: 40px;
       .project-text-wrapper {
         .project-text {
         }
@@ -567,6 +582,18 @@
       .project-text-wrapper {
         padding: 30px 0px;
         .project-text {
+        }
+      }
+    }
+
+    .text-link-download {
+      grid-column-end: span 3;
+      padding-bottom: 0px; 
+      .project-text-wrapper {
+        .project-text {
+        }
+        .project-link {
+          padding-top: 40px;
         }
       }
     }
