--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -569,7 +569,7 @@
 
     .text-short {
       grid-column-end: span 3;
-      margin-bottom: 40px;
+      padding: 20px 0px;
       .project-text-wrapper {
         .project-text {
         }
