--- a/public/css/main.css
+++ b/public/css/main.css
@@ -925,11 +925,10 @@ footer {
     grid-row-end: span 1; }
     .document-project .document-project-abstract .document-project-abstract-container {
       display: inline-block;
-      padding: 2em;
-      text-align: left; }
+      text-align: left;
+      height: 100%; }
       .document-project .document-project-abstract .document-project-abstract-container .document-project-abstract-content {
-        padding: 10px 0;
-        width: 100%;
+        padding: 2em;
         font-variation-settings: 'wght' 650, 'wdth' 95;
         line-height: 1.4em;
         font-size: calc(1.1em + 4 * (100vw - 320px) / 1180);
@@ -991,8 +990,7 @@ footer {
     font-variation-settings: 'wght' 400, 'wdth' 85;
     align-self: stretch;
     justify-self: center;
-    padding: 30px 0px;
-    box-shadow: 0 18px 0 rgba(0, 0, 0, 0.15); }
+    padding: 30px 0px; }
     .document-project .text-short .project-text-wrapper .project-text {
       padding: 30px 0px;
       margin: 0% 10%;
