--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -207,12 +207,11 @@
 
     .document-project-abstract-container {
       display: inline-block;
-      padding: 2em;
       text-align: left;
+      height: 100%;
       
       .document-project-abstract-content {
-        padding: 10px 0;
-        width: 100%;
+        padding: 2em;
         font-variation-settings: 'wght' 650, 'wdth' 95;
         line-height: 1.4em;
         font-size: calc(1.1em + 4 * (100vw - 320px) / 1180);
@@ -301,7 +300,6 @@
     align-self: stretch;
     justify-self: center;
     padding: 30px 0px;
-    box-shadow: 0 18px 0 rgba(#000, 0.15);
 
 
     .project-text-wrapper {
