--- a/public/css/main.css
+++ b/public/css/main.css
@@ -989,7 +989,6 @@ footer {
     font-size: calc(1em + 4 * (100vw - 320px) / 1180);
     font-variation-settings: 'wght' 400, 'wdth' 85;
     align-self: stretch;
-    justify-self: center;
     padding: 30px 0px; }
     .document-project .text-short .project-text-wrapper .project-text {
       padding: 30px 0px;
@@ -1066,7 +1065,7 @@ footer {
     left: 50%;
     transform: translateX(-50%);
     transition: all 0.3s ease-in-out;
-    text-align: left;
+    text-align: center;
     min-width: 100px; }
     .project-image-wrapper .project-image-captions .project-image-supercaption {
       font-family: 'LMono';
