--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -298,7 +298,6 @@
     font-size: calc(1em + 4 * (100vw - 320px) / 1180);
     font-variation-settings: 'wght' 400, 'wdth' 85;
     align-self: stretch;
-    justify-self: center;
     padding: 30px 0px;
 
 
@@ -410,7 +409,7 @@
     left: 50%;
     transform: translateX(-50%);
     transition: all 0.3s ease-in-out;
-    text-align: left;
+    text-align: center;
     min-width: 100px;
 
     .project-image-supercaption{
